feat(cli): show lists command
feat(api): get lists endpoint
