# packages/api/cfn/swagger.yml
@@ -148,6 +148,28 @@ paths:
         httpMethod: POST
         type: aws_proxy
 
+    get:
+      tags:
+        - todos
+      summary: Show Lists
+      operationId: showLists
+      parameters:
+        - name: X-Request-Id
+          in: header
+          required: true
+          description: Request identifier
+          schema:
+            type: string
+      responses:
+        200:
+          description: Show List Success
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ShowLists.Arn}/invocations
+        passthroughBehavior: when_no_match
+        httpMethod: POST
+        type: aws_proxy
+
 components:
   schemas:
     Todo:
