# packages/cli/src/controllers/show-lists.controller.ts
@@ -1,0 +1,12 @@
+import { IShowLists } from "@todos/core";
+
+export class ShowListsController {
+	constructor(private interactor: IShowLists) { }
+
+	public async handle() {
+		const { items, count } = await this.interactor.execute();
+
+		console.log("Total list count:", count)
+		console.table(items);
+	}
+}
