# packages/cli/src/infrastructure/cli/commands/lists/index.ts
@@ -1,6 +1,8 @@
 import { Command } from "commander";
 
 import createList from "./create-list";
+import showLists from "./show-lists";
 
 export const listCommand = new Command("lists")
-	.addCommand(createList);
+	.addCommand(createList)
+	.addCommand(showLists);
